--- a/src/Weather.css
+++ b/src/Weather.css
@@ -9,12 +9,6 @@
 .Weather form {
   margin-bottom: 20px;
 }
-.Weather img {
-  height: 64px;
-  display: inline-block;
-  margin-right: 10px;
-  width: 64px;
-}
 
 .Weather .Weather h1 {
   color: #878787;
@@ -33,6 +27,7 @@
   font-size: 16px;
   line-height: 19px;
   list-style: none;
+  margin-bottom: 5px;
 }
 
 .Weather .temperature {
