--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,10 @@
 .Weather {
   padding: 16px;
-  background-color: white;
   border: 1px solid grey;
   border-radius: 4px;
   text-align: left;
+  background-color: #000058;
+  color: white;
 }
 
 .Weather form {
@@ -11,7 +12,7 @@
 }
 
 .Weather .Weather h1 {
-  color: #878787;
+  color: white;
   margin: 20px 0 0 0;
   font-weight: 24px;
   font-weight: 100;
@@ -27,18 +28,18 @@
   font-size: 16px;
   line-height: 19px;
   list-style: none;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .Weather .temperature {
   font-weight: bold;
-  color: rgb(33, 33, 33);
+  color: white;
   font-size: 64px;
   font-weight: 400;
   line-height: 64px;
 }
 .Weather .unit {
-  color: rgb(33, 33, 33);
+  color: white;
   font-size: 16px;
   font-weight: 400;
   top: -32px;
