--- a/src/Weather.css
+++ b/src/Weather.css
@@ -35,12 +35,15 @@
   font-weight: bold;
   color: white;
   font-size: 64px;
-  font-weight: 400;
   line-height: 64px;
+  margin-left: 10px;
+  font-weight: 400;
 }
 .Weather .unit {
   color: white;
   font-size: 16px;
   font-weight: 400;
-  top: -32px;
+  position: relative;
+  line-height: 1;
+  top: -34px;
 }
